--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/SpaceLobster2311/Lab14PairProgramming#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "socket.io": "^4.1.2",
     "socket.io-client": "^4.1.2",
     "uuid": "^8.3.2"
